--- a/src/etp/ProtocolHandlers/CMakeLists.txt
+++ b/src/etp/ProtocolHandlers/CMakeLists.txt
@@ -6,6 +6,7 @@ set(FETPAPI_PROTOCOL_SOURCES	${CMAKE_CURRENT_LIST_DIR}/CoreHandlers.cpp
 								${CMAKE_CURRENT_LIST_DIR}/ProtocolHandlers.cpp
 								${CMAKE_CURRENT_LIST_DIR}/StoreHandlers.cpp
 								${CMAKE_CURRENT_LIST_DIR}/StoreNotificationHandlers.cpp
+								${CMAKE_CURRENT_LIST_DIR}/StoreOSDUHandlers.cpp
 								${CMAKE_CURRENT_LIST_DIR}/TransactionHandlers.cpp )
 set(FETPAPI_PROTOCOL_HEADERS	${CMAKE_CURRENT_LIST_DIR}/CoreHandlers.h
 								${CMAKE_CURRENT_LIST_DIR}/DataArrayHandlers.h
@@ -16,4 +17,5 @@ set(FETPAPI_PROTOCOL_HEADERS	${CMAKE_CURRENT_LIST_DIR}/CoreHandlers.h
 								${CMAKE_CURRENT_LIST_DIR}/ProtocolHandlers.h
 								${CMAKE_CURRENT_LIST_DIR}/StoreHandlers.h
 								${CMAKE_CURRENT_LIST_DIR}/StoreNotificationHandlers.h
+								${CMAKE_CURRENT_LIST_DIR}/StoreOSDUHandlers.h
 								${CMAKE_CURRENT_LIST_DIR}/TransactionHandlers.h )
