--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -40,6 +40,9 @@ if (Boost_SYSTEM_LIBRARY_RELEASE)
 	set(Boost_LIBRARY_DIR_RELEASE ",'${Boost_LIBRARY_DIR_RELEASE}'")
 	#cmake_path(GET Boost_SYSTEM_LIBRARY_RELEASE STEM LAST_ONLY Boost_LIBRARY_RELEASE_WLE)
 	get_filename_component(Boost_LIBRARY_RELEASE_WLE ${Boost_SYSTEM_LIBRARY_RELEASE} NAME_WLE)
+	if (UNIX)
+		string(REGEX REPLACE "^lib" "" Boost_LIBRARY_RELEASE_WLE ${Boost_LIBRARY_RELEASE_WLE})
+	endif()
 	set (Boost_LIBRARY_RELEASE_WLE ",'${Boost_LIBRARY_RELEASE_WLE}'")
 endif()
 if (WITH_FESAPI)
@@ -57,7 +60,7 @@ endif ()
 if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
 	set (EXTRA_COMPILE_ARGS "extra-compile-args=['/DSWIG_TYPE_TABLE=FESTAPI', '/utf-8']")
 else ()
-	set (EXTRA_COMPILE_ARGS "extra-compile-args=['-DSWIG_TYPE_TABLE=FESTAPI', '-std=c++11']")
+	set (EXTRA_COMPILE_ARGS "extra-compile-args=['-DSWIG_TYPE_TABLE=FESTAPI', '-std=c++17']")
 endif()
 configure_file(${CMAKE_SOURCE_DIR}/cmake/pyproject.toml.in ${CMAKE_SOURCE_DIR}/python/pyproject.toml) # Overwrite if different
 
