--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -52,14 +52,14 @@ jobs:
           cmake --install .
       - name: FESAPI install
         run: |
-          (New-Object System.Net.WebClient).DownloadFile("https://github.com/F2I-Consulting/fesapi/releases/download/v2.12.0.0/fesapi2_12_0_0-cpp-vs2019-x64.zip", "${{ runner.temp }}\fesapi.zip")
+          (New-Object System.Net.WebClient).DownloadFile("https://github.com/F2I-Consulting/fesapi/releases/download/v2.12.1.0/fesapi2_12_1_0-cpp-vs2019-x64.zip", "${{ runner.temp }}\fesapi.zip")
           7z x ${{ runner.temp }}\fesapi.zip -o${{ runner.temp }}
       - name: CMake build and install
         run: |
           cd ${{ github.workspace }}/..
           mkdir build
           cd build
-          cmake -G"Visual Studio 16 2019" -A x64 -T host=x64 -Wno-dev -Wno-deprecated -DBoost_INCLUDE_DIR=${{ runner.temp }}\boost-install -DAVRO_ROOT=${{ runner.temp }}/avro-cpp-install -DAVRO_USE_STATIC_LIBS=TRUE -DWITH_FESAPI=TRUE -DFESAPI_ROOT=${{ runner.temp }}/fesapi2_12_0_0-cpp-vs2019-x64 -DWITH_ETP_SSL=FALSE ${{ github.workspace }}
+          cmake -G"Visual Studio 16 2019" -A x64 -T host=x64 -Wno-dev -Wno-deprecated -DBoost_INCLUDE_DIR=${{ runner.temp }}\boost-install -DAVRO_ROOT=${{ runner.temp }}/avro-cpp-install -DAVRO_USE_STATIC_LIBS=TRUE -DWITH_FESAPI=TRUE -DFESAPI_ROOT=${{ runner.temp }}/fesapi2_12_1_0-cpp-vs2019-x64 -DWITH_ETP_SSL=FALSE ${{ github.workspace }}
           cmake --build . --config Release -j2
   ubuntu-22:
     runs-on: ubuntu-22.04
@@ -148,7 +148,7 @@ jobs:
           sudo apt install -y ${{ matrix.xcc_pkg }} libhdf5-dev libminizip-dev libboost-all-dev
       - name: FESAPI install
         run: |
-          git clone --branch v2.12.0.0 --single-branch https://github.com/F2I-Consulting/fesapi.git ${{ runner.temp }}/fesapi-src
+          git clone --branch v2.12.1.0 --single-branch https://github.com/F2I-Consulting/fesapi.git ${{ runner.temp }}/fesapi-src
           cd ${{ runner.temp }}
           mkdir fesapi-build
           cd fesapi-build
@@ -172,7 +172,7 @@ jobs:
           cd ${{ github.workspace }}/..
           mkdir build
           cd build
-          cmake -DAVRO_ROOT=${{ runner.temp }}/avro-cpp-install -DAVRO_USE_STATIC_LIBS=TRUE -DWITH_FESAPI=TRUE -DFESAPI_ROOT=${{ runner.temp }}/fesapi-install -DFESAPI_JAR=${{ runner.temp }}/fesapi-install/lib/fesapiJava-2.12.0.0.jar -DWITH_JAVA_WRAPPING=TRUE ${{ github.workspace }} -DCMAKE_C_COMPILER=${{ matrix.cc }} -DCMAKE_CXX_COMPILER=${{ matrix.cxx }}
+          cmake -DAVRO_ROOT=${{ runner.temp }}/avro-cpp-install -DAVRO_USE_STATIC_LIBS=TRUE -DWITH_FESAPI=TRUE -DFESAPI_ROOT=${{ runner.temp }}/fesapi-install -DFESAPI_JAR=${{ runner.temp }}/fesapi-install/lib/fesapiJava-2.12.1.0.jar -DWITH_JAVA_WRAPPING=TRUE ${{ github.workspace }} -DCMAKE_C_COMPILER=${{ matrix.cc }} -DCMAKE_CXX_COMPILER=${{ matrix.cxx }}
           cmake --build . --config Release -j2
   build_wheels_windows:
     name: Build wheels on windows-latest
@@ -191,12 +191,12 @@ jobs:
           CIBW_BEFORE_ALL: >
             %VCPKG_INSTALLATION_ROOT%\vcpkg install boost-uuid minizip hdf5[zlib] &&
             cd ${{ runner.temp }} &&
-            powershell -Command "(New-Object System.Net.WebClient).DownloadFile('https://github.com/F2I-Consulting/fesapi/archive/refs/tags/v2.12.0.0.tar.gz', '${{ runner.temp }}\fesapi-2.12.0.0.tar.gz')" &&
-            7z x ${{ runner.temp }}\fesapi-2.12.0.0.tar.gz -o${{ runner.temp }} &&
-            7z x ${{ runner.temp }}\fesapi-2.12.0.0.tar -o${{ runner.temp }} &&
+            powershell -Command "(New-Object System.Net.WebClient).DownloadFile('https://github.com/F2I-Consulting/fesapi/archive/refs/tags/v2.12.1.0.tar.gz', '${{ runner.temp }}\fesapi-2.12.1.0.tar.gz')" &&
+            7z x ${{ runner.temp }}\fesapi-2.12.1.0.tar.gz -o${{ runner.temp }} &&
+            7z x ${{ runner.temp }}\fesapi-2.12.1.0.tar -o${{ runner.temp }} &&
             mkdir fesapi-build &&
             cd fesapi-build &&
-            cmake -DCMAKE_TOOLCHAIN_FILE=%VCPKG_INSTALLATION_ROOT%\scripts\buildsystems\vcpkg.cmake -G"Visual Studio 17 2022" -A x64 -T host=x64 -Wno-dev -Wno-deprecated -DCMAKE_INSTALL_PREFIX=${{ runner.temp }}/fesapi-install ${{ runner.temp }}\fesapi-2.12.0.0 &&
+            cmake -DCMAKE_TOOLCHAIN_FILE=%VCPKG_INSTALLATION_ROOT%\scripts\buildsystems\vcpkg.cmake -G"Visual Studio 17 2022" -A x64 -T host=x64 -Wno-dev -Wno-deprecated -DCMAKE_INSTALL_PREFIX=${{ runner.temp }}/fesapi-install ${{ runner.temp }}\fesapi-2.12.1.0 &&
             cmake --build . --config Release -j2 &&
             cmake --build . --config Release --target INSTALL &&
             %VCPKG_INSTALLATION_ROOT%\vcpkg install openssl boost-beast avro-cpp &&
@@ -239,11 +239,11 @@ jobs:
             yum install -y epel-release &&
             yum --enablerepo=epel install -y minizip1.2-devel hdf5-devel cmake3 &&
             cd / &&
-            wget https://github.com/F2I-Consulting/fesapi/archive/refs/tags/v2.12.0.0.zip &&
-            unzip v2.12.0.0.zip &&
+            wget https://github.com/F2I-Consulting/fesapi/archive/refs/tags/v2.12.1.0.zip &&
+            unzip v2.12.1.0.zip &&
             mkdir fesapi-build &&
             cd fesapi-build &&
-            cmake3 -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX:STRING=/fesapi-install /fesapi-2.12.0.0 &&
+            cmake3 -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX:STRING=/fesapi-install /fesapi-2.12.1.0 &&
             cmake3 --build . -j2 --config Release &&
             cmake3 --install . &&
             cd / &&
@@ -292,11 +292,11 @@ jobs:
           # Dont use brew for dependencies https://github.com/pypa/cibuildwheel/issues/1251#issuecomment-1234553537
           CIBW_BEFORE_ALL: >
             cd ${{ github.workspace }}/.. &&
-            wget https://archives.boost.io/release/1.86.0/source/boost_1_86_0.tar.gz &&
-            tar xf boost_1_86_0.tar.gz &&
-            cd boost_1_86_0 &&
+            wget --no-verbose https://archives.boost.io/release/1.87.0/source/boost_1_87_0.tar.gz &&
+            tar xf boost_1_87_0.tar.gz &&
+            cd boost_1_87_0 &&
             ./bootstrap.sh --prefix=${{ github.workspace }}/../boost-install --with-libraries=filesystem,iostreams,program_options,regex,system &&
-            ./b2 install &&
+            ./b2 -d0 install &&
             git clone https://github.com/F2I-Consulting/Minizip.git ${{ github.workspace }}/../minizip &&
             mkdir ${{ github.workspace }}/../minizip-build &&
             cd ${{ github.workspace }}/../minizip-build &&
@@ -304,7 +304,7 @@ jobs:
             cmake --build . -j2 --config Release &&
             cmake --install . &&
             cd ${{ github.workspace }}/.. &&
-            wget https://github.com/HDFGroup/hdf5/releases/download/hdf5_1.14.5/hdf5-1.14.5.tar.gz &&
+            wget --no-verbose https://github.com/HDFGroup/hdf5/releases/download/hdf5_1.14.5/hdf5-1.14.5.tar.gz &&
             tar xf hdf5-1.14.5.tar.gz &&
             mkdir hdf5-build &&
             cd hdf5-build &&
@@ -313,28 +313,28 @@ jobs:
             cmake --install . &&
             brew install swig &&
             cd ${{ github.workspace }}/.. &&
-            wget https://github.com/F2I-Consulting/fesapi/archive/refs/tags/v2.12.0.0.zip &&
-            unzip v2.12.0.0.zip &&
+            wget --no-verbose https://github.com/F2I-Consulting/fesapi/archive/refs/tags/v2.12.1.0.zip &&
+            unzip v2.12.1.0.zip &&
             mkdir fesapi-build &&
             cd fesapi-build &&
-            cmake -DCMAKE_BUILD_TYPE=Release -DBOOST_ROOT=${{ github.workspace }}/../boost-install -DMINIZIP_ROOT=${{ github.workspace }}/../minizip-install -DHDF5_ROOT=${{ github.workspace }}/../hdf5-install -DHDF5_USE_STATIC_LIBRARIES=TRUE -DCMAKE_INSTALL_PREFIX:STRING=${{ github.workspace }}/../fesapi-install ${{ github.workspace }}/../fesapi-2.12.0.0 &&
+            cmake -DCMAKE_BUILD_TYPE=Release -DBOOST_ROOT=${{ github.workspace }}/../boost-install -DMINIZIP_ROOT=${{ github.workspace }}/../minizip-install -DHDF5_ROOT=${{ github.workspace }}/../hdf5-install -DHDF5_USE_STATIC_LIBRARIES=TRUE -DCMAKE_INSTALL_PREFIX:STRING=${{ github.workspace }}/../fesapi-install ${{ github.workspace }}/../fesapi-2.12.1.0 &&
             cmake --build . -j2 --config Release &&
             cmake --install . &&            
             cd ${{ github.workspace }}/.. &&
-            wget https://github.com/openssl/openssl/releases/download/openssl-3.4.0/openssl-3.4.0.tar.gz &&
+            wget --no-verbose https://github.com/openssl/openssl/releases/download/openssl-3.4.0/openssl-3.4.0.tar.gz &&
             tar xf openssl-3.4.0.tar.gz &&
             cd openssl-3.4.0 &&
             ./Configure --prefix=${{ github.workspace }}/../openssl-install --openssldir=${{ github.workspace }}/../openssl-install &&
             make &&
             make install &&
             cd ${{ github.workspace }}/.. &&
-            wget https://archive.apache.org/dist/avro/avro-1.11.3/cpp/avro-cpp-1.11.3.tar.gz &&
+            wget --no-verbose https://archive.apache.org/dist/avro/avro-1.11.3/cpp/avro-cpp-1.11.3.tar.gz &&
             tar xf avro-cpp-1.11.3.tar.gz &&
             sed -i '' 's/install (TARGETS avrocpp avrocpp_s/install (TARGETS avrocpp_s/' avro-cpp-1.11.3/CMakeLists.txt &&
             sed -i '' 's/install (TARGETS avrogencpp RUNTIME DESTINATION bin)//' avro-cpp-1.11.3/CMakeLists.txt &&
             mkdir avro-build &&
             cd avro-build &&
-            cmake -Wno-dev -Wno-deprecated  -DBOOST_ROOT=${{ github.workspace }}/../boost-install -DCMAKE_POSITION_INDEPENDENT_CODE=ON -DCMAKE_INSTALL_PREFIX=${{ github.workspace }}/../avro-install ${{ github.workspace }}/../avro-cpp-1.11.3 &&
+            cmake -Wno-dev -Wno-deprecated -DCMAKE_CXX_STANDARD=17 -DCMAKE_CXX_STANDARD_REQUIRED=ON -DCMAKE_CXX_EXTENSIONS=OFF -DBOOST_ROOT=${{ github.workspace }}/../boost-install -DCMAKE_POSITION_INDEPENDENT_CODE=ON -DCMAKE_INSTALL_PREFIX=${{ github.workspace }}/../avro-install ${{ github.workspace }}/../avro-cpp-1.11.3 &&
             cmake --build . -j2 --target avrocpp_s --config Release &&
             cmake --install . &&
             mkdir ${{ github.workspace }}/../build &&
