Build fix : CS version does not point to the correct DLL name

--- a/cs/CMakeLists.txt
+++ b/cs/CMakeLists.txt
@@ -9,21 +9,6 @@ message("Generating SWIG C# files...")
 # Cleaning
 execute_process(COMMAND powershell "Remove-Item ${CMAKE_SOURCE_DIR}/cs/src/* -recurse -exclude .gitignore")
 
-# The name of the library is different on Windows because it includes the version
-if (WIN32)
-	if (SWIG_LINKED_TO_RELEASE)
-		set (ASSEMBLY_NAME ${PROJECT_NAME}${CMAKE_RELEASE_POSTFIX}.${Fetpapi_VERSION})
-	else (SWIG_LINKED_TO_RELEASE)
-		set (ASSEMBLY_NAME ${PROJECT_NAME}${CMAKE_DEBUG_POSTFIX}.${Fetpapi_VERSION})
-	endif (SWIG_LINKED_TO_RELEASE)
-else (WIN32)
-	if (SWIG_LINKED_TO_RELEASE)
-		set (ASSEMBLY_NAME ${PROJECT_NAME}${CMAKE_RELEASE_POSTFIX})
-	else (SWIG_LINKED_TO_RELEASE)
-		set (ASSEMBLY_NAME ${PROJECT_NAME}${CMAKE_DEBUG_POSTFIX})
-	endif (SWIG_LINKED_TO_RELEASE)
-endif (WIN32)
-
 # SWIG execution
 set (EXECUTE_COMMAND "${SWIG_EXECUTABLE}")
 list (APPEND EXECUTE_COMMAND -v)
@@ -36,7 +21,7 @@ if (WITH_ETP_SSL)
         list (APPEND EXECUTE_COMMAND -DWITH_ETP_SSL)
 endif (WITH_ETP_SSL)
 list (APPEND EXECUTE_COMMAND -dllimport)
-list (APPEND EXECUTE_COMMAND ${ASSEMBLY_NAME}.dll)
+list (APPEND EXECUTE_COMMAND ${PROJECT_NAME}${CMAKE_RELEASE_POSTFIX}-${Fetpapi_VERSION_MAJOR}.${Fetpapi_VERSION_MINOR}.dll)
 list (APPEND EXECUTE_COMMAND -namespace)
 list (APPEND EXECUTE_COMMAND F2iConsulting.Fetpapi)
 list (APPEND EXECUTE_COMMAND -o)
